# GameDesignOS

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.en.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  setup.py
.github/workflows/: validate.yml
adapters/: README.md  claude-code.md  codex.md  local-agent-harness.md  openai-compatible.md
contracts/: README.md  assumption-registry.schema.json  decision-log.schema.json  decision.schema.json  design-asset-index.schema.json  ed-handoff.schema.json  evidence-index.schema.json  evidence-ledger.schema.json  experiment-plan.schema.json  experiment-result.schema.json  gate-result.schema.json  information-value-assessment.schema.json  intent-work-order.schema.json  issue-card.schema.json  learning-record.schema.json  player-promise-contract.schema.json  project-workspace.schema.json  router.yaml  ul-state.schema.json  validation-plan.schema.json  workflow-run.schema.json
docs/: 2026-07-11-github-readme-benchmark.md  GITHUB_ABOUT.md  github-about-checklist.md  how-to-use.zh-CN.md  try-it-in-10-minutes.md  try-it-in-10-minutes.zh-CN.md
docs/product/: README.md  architecture.md  mvp-definition.md  roadmap.md  v0.9.0-definition.md  v1.0-development-plan.md  vision.md
docs/publicity/: 2026-06-03-public-article-02.md
docs/showcases/: README.md
docs/workflows/: README.md  decision-to-information.md  evidence-to-proposal.md  idea-to-validation.md  media-to-diagnosis.md  weekly-ed-experiment.md
examples/golden-lighthouse/: README.md
game-concept-architect/: README.md  SKILL.md
game-concept-architect/agents/: openai.yaml
game-concept-architect/evals/: behavior_evals.json  evals.json  negative_cases.md  rubric.yaml  synthetic_outputs.json
game-concept-architect/examples/: README.md  clockwork-garden-defense-illustrated.md  clockwork-garden-defense.md  dream-postman-card-adventure.md  tiny-crew-space-salvage.md
game-concept-architect/references/: concept-seed-extraction.zh-CN.md  core-loop-expansion.zh-CN.md  (+12 more)
game-design-book-translator/: README.en.md  README.md  README.zh-CN.md  SKILL.md
game-design-proposal-writer/: README.md  SKILL.md
game-design-source-curator/: AGENTS.md  README.en.md  README.md  README.zh-CN.md  SKILL.md
game-experience-analyzer/: README.en.md  README.md  SKILL.md
game-experience-density-optimizer/: README.md  SKILL.md
gamedesignos/: __init__.py  _version.py  cli.py  constants.py  errors.py  io_utils.py  project_ready.py  resources.py  routing.py  templates.py  voi.py  workspace.py  workspace_init.py  workspace_pack.py  workspace_validation.py
paranoia-ai-system-evolver/: README.en.md  README.md  README.zh-CN.md  SKILL.md  quick_validate.py
releases/: README.md  v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.6.1.md  v0.7.0.md  v0.8.0.md  v0.9.0.md  v1.0.0.md  v1.1.0.md  v1.2.0.md
runtime/: README.md
scripts/: create_golden_project.py  run_behavior_evals.py  smoke_installed_wheel.py  smoke_sdist_rebuild.py  sync_global_skill.py  validate_agent_skills.py  validate_repo.py  validate_skill.py
voi-ooda-ai-system-evolver/: README.en.md  README.md  README.zh-CN.md  SKILL.md
(+239 files in other folders)
